--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Danish drama -- Translations into English'
 - !lcc 'PT'
+- GITenberg
 title: The Death of Balder
 url: http://www.gutenberg.org/ebooks/13879
